--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,10 +8,10 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: rgb(108, 223, 108);
   height: 150px;
   padding: 20px;
-  color: white;
+  color: rgb(202, 202, 202);
 }
 
 .App-intro {
